crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__dropdown_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                                                                  │"
"│                                                                                                                      │"
"│   /help for help · /login codex to use a subscription                                                                │"
"│   cwd: /tmp/project                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"> run the tests                                                                                                         "
"                                                                                                                        "
"❯ /help    shortcuts and commands                                                                                       "
"  /clear   start a fresh session here                                                                                   "
"  /resume  reopen a session                                                                                             "
"  /exit    leave bingo                                                                                                  "
"  /quit    leave bingo                                                                                                  "
"  /model   [provider/]model                                                                                             "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > /                                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                             fake/fake-1"
